# owr-502

./: .gitignore  .gitmodules  README.md  can.sh  compile_commands.json  init.bash  init_dev.sh  platformio.ini
.devcontainer/: .env  Dockerfile  devcontainer.json  docker-compose-jetson.yml  docker-compose.yml
.github/ISSUE_TEMPLATE/: hardware_erratum.md
.github/workflows/: check_boards.sh  check_elec.yml
Bluesat.pretty/: BM06B-PASK.kicad_mod  BM24B-ZPDSS.kicad_mod  IDC14-pad.kicad_mod  IDC6-pad.kicad_mod  IDC6.kicad_mod  M2.5.kicad_mod  S4P-VH.kicad_mod  SM02B-PASS.kicad_mod  USB_C.kicad_mod  VDFN5045-12.kicad_mod  VQFN100_KDX_MCH.kicad_mod
doc/: common_board_standard.md  part_selection.md
include/: ConfigTypes.h  Constants.h
lib/MXLEMMINGObserverSensor/: MXLEMMINGObserverSensor.cpp  MXLEMMINGObserverSensor.h
src/: main.cpp
src/VH4_extender_elec/: VH4_extender.kicad_pcb  VH4_extender.kicad_pro  VH4_extender.kicad_sch
src/bad_apple/: Cargo.toml  bad_apple.wzrd
src/bad_apple/.cargo/: config.toml
src/bad_apple/src/: main.rs
src/besc_firmware/: Cargo.toml  README.md
src/besc_firmware/src/: main.rs
src/besc_firmware/src/bsp/: drv8301.rs  mod.rs  six_pwm.rs
src/besc_firmware/src/comms/: mod.rs
src/besc_firmware/src/config/: presets.rs
src/besc_firmware/src/state/: mod.rs
src/besc_firmware/src/util/: mod.rs
src/besc_firmware/tools/: setup.sh
src/bg431esc1_actuator/: CMakeLists.txt  README.md  bg431esc1_plugin.xml  package.xml
src/bg431esc1_actuator/include/: visibility_control.h
src/bg431esc1_actuator/include/bg431esc1_actuator/: bg431esc1_actuator.hpp  can_mux.hpp
src/bg431esc1_actuator/src/: bg431esc1_actuator.cpp  bg431esc1_actuator_parameters.yaml  can_mux.cpp
src/bg431esc1_actuator/test/config/: test_actuator.yaml
src/bg431esc1_actuator/test/description/: urdf.xacro
src/bg431esc1_actuator/test/launch/: run_one.py
src/bootloader/: .gitignore  Cargo.toml  README.md  build.rs  itm.ron  link.x  link.x.tst  openocd.gdb
src/bootloader/.cargo/: config.toml
src/bootloader/linker/: memory_stm32g474.x
src/bootloader/openocd/: stm32g4x.cfg
src/bootloader/src/: argb.rs  aux.rs  can.rs  chunk.rs  chunk_flasher.rs  clock.rs  common.rs  comms_handler.rs  comms_handler_old.rs  crc_handler.rs  flash_data.rs  flash_handler.rs  gaslighting_handler.rs  iflash.rs  main.rs  peripherals.rs  poly  qspi.rs
src/canadensis_mvp/: Cargo.toml  README.md  build.rs  openocd.cfg  run.sh
src/canadensis_mvp/.cargo/: config.toml
src/canadensis_mvp/dsdl/owr502/: 1337.CoolType.4.2.dsdl  502.CustomSpeed.0.1.dsdl  BaseSpeed.1.0.dsdl  TurboEncabulator_Capacitance.4.2.dsdl
src/canadensis_mvp/linker/: memory_stm32f405XXXX.x
src/canadensis_mvp/openocd/board/: bootleg_bluepill.cfg  g431.cfg  nucleo_g474re.cfg
src/canadensis_mvp/openocd/chip/: stm32f1pirate.cfg
src/canadensis_mvp/src/: boards.rs  main.rs
src/canadensis_mvp/src/boards/: README.md
src/canadensis_mvp/src/boards/stm32f103/: mod.rs
src/canadensis_mvp/src/boards/stm32g431/: mod.rs
src/canadensis_mvp/src/boards/stm32g474/: mod.rs
src/cpm_firmware/: Cargo.toml  README.md
src/cpm_firmware/openocd/: stm32g4x.cfg
src/cpm_firmware/src/: main.rs
src/cyphal_vesc_driver/: CMakeLists.txt  cyphal_vesc_driver_plugin.xml  package.xml
src/cyphal_vesc_driver/include/cyphal_vesc_driver/: cyphal_vesc_driver.hpp
src/cyphal_vesc_driver/src/: cyphal_vesc_driver.cpp
src/deckard/: Cargo.toml  README.md
src/deckard/src/: cmd.rs  core.rs  main.rs
src/embedded_common/: Cargo.toml  README.md  bs_link.x  build.rs
src/embedded_common/.cargo/: config.toml
src/embedded_common/src/: argb.rs  can.rs  clock.rs  debug.rs  foolcan.rs  lib.rs  stepper_bus.rs  tmc_registers.rs
src/embedded_common/tools/: openocd-stm32f4.cfg  openocd-stm32g4.cfg  openocd.gdb
src/main_power_hub_firmware/: Cargo.toml  README.md
src/main_power_hub_firmware/.cargo/: config.toml
src/main_power_hub_firmware/openocd/: stm32g4x.cfg
src/main_power_hub_firmware/src/: boards.rs  main.rs  power_distributor.rs  setup.rs
src/stepper_drivebase_firmware/: Cargo.toml  README.md  build.rs  openocd.gdb  test_yakut_command.bash
src/stepper_drivebase_firmware/.cargo/: config.toml
src/stepper_drivebase_firmware/linker/: memory_bigtree.x  memory_stm32g431cbu6.x  memory_stm32g474.x
src/stepper_drivebase_firmware/openocd/: stm32g0x.cfg
src/stepper_drivebase_firmware/src/: as_registers.rs  boards.rs  common.rs  drivebase.rs  encoder_bus.rs  main.rs  stepper_bus.rs
src/stepper_drivebase_firmware/src/boards/stm32g0xx/: clock.rs  mod.rs
src/stepper_drivebase_firmware/src/boards/stm32g431/: mod.rs
src/stepper_drivebase_firmware/src/boards/stm32g4xx/: clock.rs  fdcan.rs  i2c.rs  mod.rs  qspi.rs  stepper.rs
src/stepper_drivebase_firmware/src/stm32g4xx/: as_registers.rs  clock.rs  encoder_bus.rs  fdcan.rs  i2c.rs  mod.rs  stepper.rs  stepper_bus.rs  tmc_registers.rs
src/stepper_drivebase_firmware/tools/: test_yakut_command.bash
src/swerve_drive_controller/: CMakeLists.txt  README.md  package.xml  swerve_drive_plugin.xml
src/swerve_drive_controller/include/: visibility_control.h
src/swerve_drive_controller/include/swerve_drive_controller/: swerve_drive_controller.hpp
src/swerve_drive_controller/src/: swerve_drive_controller.cpp  swerve_drive_controller_parameters.yaml
src/swerve_drive_controller/test/: test_load_swerve_drive_controller.cpp
src/swerve_drive_controller/test/config/: test_swerve_drive_controller.yaml
src/vesc_firmware/: Cargo.toml  README.md  build.rs
src/vesc_firmware/.cargo/: config.toml
src/vesc_firmware/linker/: memory_stm32f446.x
src/vesc_firmware/src/: main.rs  utils.rs
src/vesc_firmware/src/bsp/: clock.rs  drv8301.rs  mod.rs  six_pwm.rs
src/vesc_firmware/src/comms/: mod.rs
src/vesc_firmware/src/config/: mod.rs  presets.rs
src/vesc_firmware/src/state/: mod.rs
src/vesc_firmware/src/util/: debug.rs  foc.rs  mod.rs
src/vesc_firmware/tools/: run.sh
src/wzrd_pack/: Cargo.toml  README.md
src/wzrd_pack/src/: main.rs
utils/: can.sh  ctrl.py  init.bash  init_dev.sh  status.py
(+439 files in other folders)
