cargo-features = ["profile-rustflags"]

[package]
authors = ["Evan La Fontaine <navelafontaine@gmail.com>"]
edition = "2024"
readme = "README.md"
name = "canfd_bootloader"
version = "0.0.1"

[features]
default = ["stm32g4/stm32g474", "stm32g4xx-hal/stm32g474"]

[dependencies]
cortex-m-rt = "0.7.5"
# panic-semihosting = "0.6.0" # NOTE: change to different panic once not in development environment
cortex-m-semihosting = "0.5.0"
canadensis = "0.5.0"
canadensis_data_types = "0.5.0"
canadensis_filter_config = "0.5.0"
nb = "1.1.0"
heapless = "0.9.1"
embedded-alloc = "0.6.0"
embedded-io = "0.6.1"
libm = "0.2.15"
# Which dependencies and which features below are enabled depends on the target.
stm32g4 = { version = "0.16.0", features = ["rt"] }
# stm32g4xx-hal patched in below; original is https://github.com/stm32-rs/stm32g4xx-hal
stm32g4xx-hal = { path = "/home/evan/bluesat/stm32g4xx-hal", features = ["rt", "can"] }
# stm32g4xx-hal = { git = "https://github.com/bluesatunsw/stm32g4xx-hal", branch = "qspi", version = "0.0.2", features = ["rt", "can"] }
wzrd_core ={ path = "../wzrd_core"}
fdcan = "0.2.1"
fugit = "0.3.9"

[dependencies.canadensis_can]
version = "0.5.1"
features = ["can-fd"]

[dependencies.cortex-m]
version = "0.7.7"
features = ["critical-section-single-core"]

# allows use of `cargo fix`
[[bin]]
name = "canfd_bootloader"
test = false
bench = false

[profile.release]
codegen-units = 1 # better optimizations
debug = true # symbols are nice and they don't increase the size on Flash
opt-level = "s"
lto = true # better optimizations
