[package]
authors = ["Jonah Hopkin <jonahhopkin@gmail.com>"]
edition = "2018"
readme = "README.md"
name = "canadensis_mvp"
version = "0.1.0"

[features]
# NOTE: these should be mutually exclusive. if multiple board features enabled, only the board listed first below will apply.
# Only stm32f103 actually has any code right now.
default = ["stm32f103"]
# STM32 Blue Pill, CAN only -- prototyping
stm32f103 = []
# Mellow FLY-DP5 stepper board, CAN FD -- prototyping
stm32f072 = []
# Actual G431 custom ESCs to be used on the 2026 rover, CAN FD
stm32g431 = []

[dependencies]
# NOTE: stm32f1xx-hal should really re-export their version of bxcan
bxcan = "0.8.0"
canadensis = "0.5.0"
canadensis_bxcan = "0.5.0"
canadensis_data_types = "0.5.0"
canadensis_macro = "0.5.0"
cortex-m-rt = "0.7.5"
cortex-m-semihosting = "0.5.0"
embedded-alloc = "0.6.0"
fugit = "0.3.7"
heapless = "0.9.1"
nb = "1.1.0"
panic-semihosting = "0.6.0"
zerocopy = "0.8.26"
canadensis_encoding = "0.5.0"
canadensis_core = "0.5.0"

[dependencies.canadensis_can]
version = "0.5.0"
features = ["can-fd"]

[dependencies.stm32f1xx-hal]
version = "0.11.0"
features = ["stm32f103", "medium"]

[dependencies.cortex-m]
version = "0.7.7"
features = ["critical-section-single-core"]

# allows use of `cargo fix`
[[bin]]
name = "canadensis_mvp"
test = false
bench = false

[profile.release]
codegen-units = 1 # better optimizations
debug = true # symbols are nice and they don't increase the size on Flash
lto = true # better optimizations
