[package]
authors = ["Jonah Hopkin <jonahhopkin@gmail.com>"]
edition = "2018"
readme = "README.md"
name = "canadensis_mvp"
version = "0.1.0"

[features]
# NOTE: Features below should be mutually exclusive. If multiple board features
# enabled, bad things will happen! Use the run.sh script to avoid this.
default = ["stm32g431"]

# DEV BOARD 			FEATURES 	ARCh APPLICATION
# -----------------------------------------------------------------------------
# STM32 Blue Pill, 		bxCAN ONLY, 	prototyping only
stm32f103 = ["dep:stm32f1xx-hal"]
# WeAct STM32G431 core board, 	FDCAN, 		prototyping only
stm32g431 = ["dep:stm32g4"]
# Nucleo-G474RE, 		FDCAN, 		ARCh2026 stepper, main power, system etc. boards
stm32g474 = []
# TBD, 				FDCAN, 		ARCh2026+ VESCs
stm32f405 = []

[dependencies]
# NOTE: stm32f1xx-hal should really re-export their version of bxcan
bxcan = "0.8.0"
canadensis = "0.5.0"
canadensis_bxcan = "0.5.0"
canadensis_data_types = "0.5.0"
canadensis_macro = "0.5.0"
cortex-m-rt = "0.7.5"
cortex-m-semihosting = "0.5.0"
embedded-alloc = "0.6.0"
fugit = "0.3.7"
heapless = "0.9.1"
nb = "1.1.0"
panic-semihosting = "0.6.0"
zerocopy = "0.8.26"
canadensis_encoding = "0.5.0"
canadensis_core = "0.5.1"
stm32g4 = { version = "0.16.0", features = ["stm32g431", "rt"], optional = true }
stm32f1xx-hal = { version = "0.11.0", features = ["stm32f103", "medium"], optional = true }
canadensis_filter_config = "0.5.0"

[dependencies.canadensis_can]
version = "0.5.1"
features = ["can-fd"]

[dependencies.cortex-m]
version = "0.7.7"
features = ["critical-section-single-core"]

# allows use of `cargo fix`
[[bin]]
name = "canadensis_mvp"
test = false
bench = false

[profile.release]
codegen-units = 1 # better optimizations
debug = true # symbols are nice and they don't increase the size on Flash
lto = true # better optimizations
