[package]
authors = ["Jonah Hopkin <jonahhopkin@gmail.com>", "Sean Haines <seanhaines2007@gmail.com>", "Jethro Rosettenstein <jethro.rosette@outlook.com>"]
readme = "README.md"
name = "main_power_hub_firmware"
version = "0.1.0"
edition = "2024"

[dependencies]
cortex-m-rt = "0.7.5"
cortex-m-semihosting = "0.5.0"
panic-semihosting = "0.6.0" # NOTE: change to different panic once not in development environment
canadensis = "0.5.0"
canadensis_data_types = "0.5.0"
canadensis_filter_config = "0.5.0"
heapless = "0.9.1"
embedded-alloc = "0.6.0"
embedded-io = "0.6.1"
embedded_common = { path = "../embedded_common" }
bitfield-struct = "0.12.1"

[dependencies.stm32g4xx-hal]
version = "0.0.2"
git = "https://github.com/bluesatunsw/stm32g4xx-hal"
branch = "qspi"
features = ["stm32g474", "rt", "can"]

[dependencies.canadensis_can]
version = "0.5.1"
features = ["can-fd"]

[dependencies.cortex-m]
version = "0.7.7"
features = ["critical-section-single-core"]

# allows use of `cargo fix`
[[bin]]
name = "main_power_hub_firmware"
test = false
bench = false

[profile.release]
codegen-units = 1 # better optimizations
debug = true # symbols are nice and they don't increase the size on Flash
lto = true # better optimizations
