[package]
authors = ["Jonah Hopkin <jonahhopkin@gmail.com>"]
edition = "2018"
readme = "README.md"
name = "stepper_drivebase_firmware"
version = "0.0.1"

[dependencies]
cortex-m-rt = "0.7.5"
panic-semihosting = "0.6.0" # NOTE: change to different panic once not in development environment
cortex-m-semihosting = "0.5.0"
canadensis = "0.5.0"
canadensis_data_types = "0.5.0"
canadensis_filter_config = "0.5.0"
nb = "1.1.0"
heapless = "0.9.1"
embedded-alloc = "0.6.0"
cfg-if = "1.0.4"
embedded-io = "0.6.1"
libm = "0.2.15"
# Which dependencies and which features below are enabled depends on the target.
stm32g4 = { version = "0.16.0", features = ["rt"], optional = true }
embedded_common ={ path = "../embedded_common" }
bitfield-struct = "0.12.1"
stm32g4xx-hal = { git = "https://github.com/bluesatunsw/stm32g4xx-hal", branch = "qspi", version = "0.0.2", features = ["stm32g474", "rt", "can"] }

[dependencies.canadensis_can]
version = "0.5.1"
features = ["can-fd"]

[dependencies.cortex-m]
version = "0.7.7"
features = ["critical-section-single-core"]

# allows use of `cargo fix`
[[bin]]
name = "stepper_drivebase_firmware"
test = false
bench = false

[profile.release]
codegen-units = 1 # better optimizations
debug = true # symbols are nice and they don't increase the size on Flash
lto = true # better optimizations
