[package]
authors = ["Jonah Hopkin <jonahhopkin@gmail.com>"]
edition = "2018"
readme = "README.md"
name = "vesc_rust_test"
version = "0.0.1"

[dependencies]
cortex-m-rt = "0.7.5"
panic-semihosting = "0.6.0" # NOTE: change to different panic once not in development environment
cortex-m-semihosting = "0.5.0"
nb = "1.1.0"
heapless = "0.9.1"
embedded-alloc = "0.6.0"
cfg-if = "1.0.4"
embedded-io = "0.6.1"
libm = "0.2.15"
cortex-m-log = { version = "0.8.0", features = ["itm"]}
foc = "0.3.0"
cordic = "0.1.5"
fixed = "1.29.0"
fugit = "0.3.9"
canadensis = "0.5.0"
canadensis_bxcan = "0.5.0"
canadensis_can = "0.5.1"
bxcan = "0.8.0"
canadensis_data_types = "0.5.0"
bitfield = "0.19.4"
half = { version = "2.7.1", default-features = false }


[dependencies.stm32f4xx-hal]
version = "0.23.0"
features = ["stm32f446", "can", "can1"] 

[dependencies.cortex-m]
version = "0.7.7"
features = ["critical-section-single-core"]

# allows use of `cargo fix`
[[bin]]
name = "vesc_rust_test"
test = false
bench = false

[profile.release]
codegen-units = 1 # better optimizations
debug = true # symbols are nice and they don't increase the size on Flash
lto = true # better optimizations
